add deck and cards to garage

--- a/src/app/deck/deck.component.html
+++ b/src/app/deck/deck.component.html
@@ -1,4 +1,5 @@
-<div>
+<div
+    >
     <div class="container-fluid">
         <!--<app-font-size-variable></app-font-size-variable>-->
         <app-card
