--- a/src/app/garage/garage.component.html
+++ b/src/app/garage/garage.component.html
@@ -10,4 +10,24 @@
 <!--<mat-grid-list>
     <mat-grid-tile></mat-grid-tile>
 </mat-grid-list>-->
-<p>{{playerCards}}</p>
+<!--<p>{{playerCards}}</p>-->
+
+<!--<div>
+    <div class="container-fluid">
+        &lt;!&ndash;<app-font-size-variable></app-font-size-variable>&ndash;&gt;
+        <app-card
+                *ngFor="let card of playerCards"
+                [card]="card"
+        >
+
+        </app-card>
+        &lt;!&ndash;<app-popup-img
+            [hidden]="showPopup"
+        [popupCard]="popupCard"></app-popup-img>&ndash;&gt;
+    </div>
+</div>-->
+
+<app-deck
+[cardList]="playerCards">
+
+</app-deck>
