--- a/src/app/garage/garage.component.html
+++ b/src/app/garage/garage.component.html
@@ -1,10 +1,10 @@
-<p>Public response:</p>
+<!--<p>Public response:</p>
 <p>{{publicRole}}</p>
 <p>User response:</p>
 <p>{{userRole}}</p>
 <p>Admin response:</p>
 <p>{{adminRole}}</p>
-<p>Admin page:</p>
+<p>Admin page:</p>-->
 <div
 [innerHTML]=adminButton></div>
 <!--<mat-grid-list>
@@ -28,6 +28,6 @@
 </div>-->
 
 <app-deck
-[cardList]="playerCards">
+[cardList]="mainService.playerCards">
 
 </app-deck>
