--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,3 +25,7 @@
   <button mat-raised-button color="primary"
   (click)="toRegistration()">Register</button>
 </mat-card>
+
+
+<mat-spinner *ngIf="isLoading"
+  ></mat-spinner>
