--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,11 +9,11 @@
     <button mat-button routerLink="/home"><mat-icon>home</mat-icon></button>
   </span>
   <div fxLayout="row" fxShow="false" fxShow.gt-sm>
-    <button mat-button routerLink="/login" *ngIf="!authService.isAuthenticated">
+    <button mat-button routerLink="/login" *ngIf="!mainService.userIsLoggedIn">
       <mat-icon>power_settings_new</mat-icon>
       Login
     </button>
-    <button mat-button *ngIf="authService.isAuthenticated" (click)="logout()">
+    <button mat-button *ngIf="mainService.userIsLoggedIn" (click)="logout()">
       <mat-icon>exit_to_app</mat-icon>
       Logout
     </button>
@@ -37,12 +37,12 @@
   </button>
   <button mat-menu-item
           routerLink="/login"
-          *ngIf="!authService.isAuthenticated"
+          *ngIf="!mainService.userIsLoggedIn"
   >
     <mat-icon>power_settings_new</mat-icon>
     Login
   </button>
-  <button mat-menu-item *ngIf="authService.isAuthenticated" (click)="logout()">
+  <button mat-menu-item *ngIf="mainService.userIsLoggedIn" (click)="logout()">
     <mat-icon>exit_to_app</mat-icon>
     Logout
   </button>
