--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
 h1 {
-  text-align: center;
+    text-align: center;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
