--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,31 +1,36 @@
 <mat-card>
-  <mat-card-content>
-    <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
-      <h2>Log In</h2>
-      <mat-error *ngIf="!loginValid">
-        The username and password were not recognized
-      </mat-error>
-      <mat-form-field>
-        <input matInput placeholder="Name" [(ngModel)]="username" name="username" required>
-        <mat-error>
-          Please provide a valid email address
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <input matInput type="password" placeholder="Password" [(ngModel)]="password" name="password" required>
-        <mat-error>
-          Please provide a valid password
-        </mat-error>
-      </mat-form-field>
-      <button mat-raised-button color="primary" [disabled]="!loginForm.form.valid">Login</button>
-    </form>
-  </mat-card-content>
-<mat-divider></mat-divider>
-  <h2>OR</h2>
-  <button mat-raised-button color="primary"
-  (click)="toRegistration()">Register</button>
+    <mat-card-content>
+        <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
+            <h2>Log In</h2>
+            <mat-error *ngIf="!loginValid">
+                The username and password were not recognized
+            </mat-error>
+            <mat-form-field>
+                <input matInput placeholder="Name" [(ngModel)]="username" name="username" required>
+                <mat-error>
+                    Please provide a valid email address
+                </mat-error>
+            </mat-form-field>
+            <mat-form-field>
+                <input matInput type="password" placeholder="Password" [(ngModel)]="password" name="password" required>
+                <mat-error>
+                    Please provide a valid password
+                </mat-error>
+            </mat-form-field>
+            <button mat-raised-button color="primary" [disabled]="!loginForm.form.valid">Login</button>
+        </form>
+    </mat-card-content>
+    <mat-divider></mat-divider>
+    <h2>OR</h2>
+    <button mat-raised-button color="primary"
+            (click)="toRegistration()">Register
+    </button>
+    <div class="center"
+         *ngIf="this.mainService.isLoading">
+        <mat-spinner
+                diameter="300"
+                strokeWidth=5
+        >Fetching garage...
+        </mat-spinner>
+    </div>
 </mat-card>
-
-
-<mat-spinner *ngIf="isLoading"
-  ></mat-spinner>
