--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -20,3 +20,13 @@ mat-form-field {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
 }
+
+.overlay{
+  height:100%;
+  width:100%;
+  background-color:rgba(0, 0, 0, 0.286);
+  z-index:    10;
+  top:        0;
+  left:       0;
+  position:   fixed;
+}
