--- a/src/app/card/popup-img/popup-img.component.html
+++ b/src/app/card/popup-img/popup-img.component.html
@@ -1,8 +1,8 @@
 <div>
     <img
-        [src]="popupCard.imageUrl.value"
-        [style.width]=popupCard.objectWidth.value
-        [style.height]=popupCard.objectHeight.value
+        [src]="playerCard.card.value.imageUrl.value"
+        [style.width]=playerCard.card.value.objectWidth.value
+        [style.height]=playerCard.card.value.objectHeight.value
         [style.object-position]=cardObjectPosition
     >
 </div>
