--- a/src/app/card/text-var-size-block/text-var-size-block.component.html
+++ b/src/app/card/text-var-size-block/text-var-size-block.component.html
@@ -1,6 +1,6 @@
 <div class="card-subtitle" id = "box">
     <h1
 
-        id = "type_{{card.id.value}}"
-    >{{card.type.value}}</h1>
+        id = "type_{{playerCard.id.value}}"
+    >{{playerCard.card.value.type.value}}</h1>
 </div>
