--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,8 +31,9 @@
             <mat-spinner
                     diameter="300"
                     strokeWidth=5
-            >Fetching garage...
+            >
             </mat-spinner>
+            <div><h2>Fetching garage...</h2></div>
         </div>
     </div>
 </mat-card>
