--- a/src/app/deck/deck.component.html
+++ b/src/app/deck/deck.component.html
@@ -3,13 +3,13 @@
     <!--<div class="container-fluid">-->
     <!--<app-font-size-variable></app-font-size-variable>-->
     <app-card
-            *ngFor="let card of cardList | paginate : {
+            *ngFor="let playerCard of cardList | paginate : {
                 itemsPerPage: itemsPerPage,
                   currentPage: page,
                   totalItems: count
 };"
 
-            [card]="card"
+            [playerCard]="playerCard"
     >
 
     </app-card>
