update simple card working on admin page

--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -67,11 +67,8 @@
         [initAllProps]=initAllProps
         [selectedCard]=selectedCard></app-input-field>
     <button
-        id="update-btn"
-        (click)="update()">Update card
+            id="update-btn"
+            (click)="updateBulkCards()">Bulk update cards
     </button>
-    <button
-        id="create-btn"
-        (click)="createCard()">Create card
-    </button>
+
 </div>
