--- a/src/app/admin-page/input-field/input-field.component.html
+++ b/src/app/admin-page/input-field/input-field.component.html
@@ -20,5 +20,14 @@
            [value]=selectedCard[prop.identifier].value
            [attr.data-input]=prop.identifier>
 </div>
+
+<button
+        id="create-btn"
+        (click)="createNewCard()">Create card
+</button>
+<button
+        id="update-btn"
+        (click)="update()">Update card
+</button>
 <!--
 [(ngModel)]="selectedCard.card.value[prop.identifier].value"-->
