fixed selected button working

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -40,7 +40,8 @@
         ></app-text-var-size-block>
 
         <app-tab-content class="front-table"
-                         [datas]="frontDatas()"></app-tab-content>
+                         [datas]="frontDatas()">
+        </app-tab-content>
         <app-select-button
             [cardId]=playerCard.id.value
 
