add upgrade page and button

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -96,7 +96,9 @@
             </div>
         </div>
 
-
+        <app-upgrade-button
+        [playerCard]=playerCard
+        ></app-upgrade-button>
     </div>
 </div>
 
