fixed calculated values to two decimal places on upgrade page

--- a/src/app/admin-page/input-field/input-field.component.html
+++ b/src/app/admin-page/input-field/input-field.component.html
@@ -21,10 +21,10 @@
     <input class="input-group" id="input_{{prop.identifier}}_playerCard"
            (input)="calculateTuningField(prop.identifier)"
            [value]=prop.value
-           [attr.data-input]=prop.identifier
     >
 
 </div>
+           <!--[attr.data-input]=prop.identifier-->
 
            <!--[(ngModel)]=multiplierFieldValue-->
 <button
