upgrade page: - when reaching maximum tuning level, the tuning button will be disable

--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -6,19 +6,26 @@
             <app-card
                     [playerCard]=selectedCard></app-card>
         </div>
-        <div class="btn-group" role="group" style="display: inline-flex">
+        <!--<div class="btn-group" role="group" style="display: inline-flex">
             <div>
-                <button type="button" (click)="calculateTuningField('engine')">Engine</button>
+                <button type="button"
+                        id="tuningButton_engine"
+                        (click)="calculateTuningField('engine')">Engine</button>
             </div>
             <div>
-                <button type="button" (click)="calculateTuningField('chassis')">Chassis</button>
+                <button type="button"
+                        id="tuningButton_chassis"
+                        (click)="calculateTuningField('chassis')">Chassis</button>
             </div>
             <div>
-                <button type="button" (click)="calculateTuningField('cornering')">Cornering</button>
+                <button type="button"
+                        id="tuningButton_cornering"
+                        (click)="calculateTuningField('cornering')">Cornering</button>
             </div>
-        </div>
+        </div>-->
         <div>
-            <button>Do it</button>
+            <button
+            (click)="upgradeTuningLevel()">Do it</button>
         </div>
         <div>
             <button
@@ -42,17 +49,18 @@
             </tbody>
         </table>
         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off"
+            <input type="radio" class="btn-check" name="btnradio" id="tuningButton_engine" autocomplete="off"
                    (click)="calculateTuningField('engine')">
-            <label class="btn btn-outline-primary" for="btnradio1">Engine</label>
+            <label class="btn btn-outline-primary" for="tuningButton_engine">Engine</label>
 
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off"
+            <input type="radio" class="btn-check" name="btnradio" id="tuningButton_chassis" autocomplete="off"
                    (click)="calculateTuningField('chassis')">
-            <label class="btn btn-outline-primary" for="btnradio2">Chassis</label>
+            <label class="btn btn-outline-primary" for="tuningButton_chassis">Chassis</label>
 
-            <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off"
+            <input type="radio" class="btn-check" name="btnradio" id="tuningButton_cornering" autocomplete="off"
                    (click)="calculateTuningField('cornering')">
-            <label class="btn btn-outline-primary" for="btnradio3">Cornering</label>
+            <label class="btn btn-outline-primary" for="tuningButton_cornering">Cornering</label>
         </div>
+
     </div>
 </div>
