--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -24,16 +24,20 @@
             </div>
         </div>-->
         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
-            <input type="radio" class="btn-check" name="btnradio" id="tuningButton_engine" autocomplete="off"
-                   (click)="calculateTuningField('engine')">
+            <input type="radio" class="btn-check" name="tuningRadioButton" id="tuningButton_engine" autocomplete="off"
+                   value = 'engine'
+                   (click)="buttonIsChecked($any($event.target).value) ? false : calculateTuningField('engine', $event)">
             <label class="btn btn-outline-primary" for="tuningButton_engine">Engine</label>
 
-            <input type="radio" class="btn-check" name="btnradio" id="tuningButton_chassis" autocomplete="off"
-                   (click)="calculateTuningField('chassis')">
+            <input
+                    type="radio" class="btn-check" name="tuningRadioButton" id="tuningButton_chassis" autocomplete="off"
+                   value = 'chassis'
+                    (click)="buttonIsChecked($any($event.target).value) ? false : calculateTuningField('chassis', $event)">
             <label class="btn btn-outline-primary" for="tuningButton_chassis">Chassis</label>
 
-            <input type="radio" class="btn-check" name="btnradio" id="tuningButton_cornering" autocomplete="off"
-                   (click)="calculateTuningField('cornering')">
+            <input type="radio" class="btn-check" name="tuningRadioButton" id="tuningButton_cornering" autocomplete="off"
+                   value = 'cornering'
+                   (click)="buttonIsChecked($any($event.target).value) ? false : calculateTuningField('cornering', $event)">
             <label class="btn btn-outline-primary" for="tuningButton_cornering">Cornering</label>
         </div>
         <div>
