--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -42,7 +42,7 @@
         </div>
         <div>
             <button
-            (click)="sendUpgradeToBackend()">Do it</button>
+            (click)="saveCalculatedPlayerCard()">Do it</button>
         </div>
         <div>
             <button
