--- a/src/app/upgrade/upgrade.component.html
+++ b/src/app/upgrade/upgrade.component.html
@@ -6,43 +6,29 @@
             <app-card
                     [playerCard]=selectedCard></app-card>
         </div>
-        <!--<div class="btn-group" role="group" style="display: inline-flex">
-            <div>
-                <button type="button"
-                        id="tuningButton_engine"
-                        (click)="calculateTuningField('engine')">Engine</button>
-            </div>
-            <div>
-                <button type="button"
-                        id="tuningButton_chassis"
-                        (click)="calculateTuningField('chassis')">Chassis</button>
-            </div>
-            <div>
-                <button type="button"
-                        id="tuningButton_cornering"
-                        (click)="calculateTuningField('cornering')">Cornering</button>
-            </div>
-        </div>-->
         <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
             <input type="radio" class="btn-check" name="tuningRadioButton" id="tuningButton_engine" autocomplete="off"
-                   value = 'engine'
+                   value='engine'
                    (click)="buttonIsChecked($any($event.target).value) ? false : calculateTuningField('engine', $event)">
             <label class="btn btn-outline-primary" for="tuningButton_engine">Engine</label>
 
             <input
                     type="radio" class="btn-check" name="tuningRadioButton" id="tuningButton_chassis" autocomplete="off"
-                   value = 'chassis'
+                    value='chassis'
                     (click)="buttonIsChecked($any($event.target).value) ? false : calculateTuningField('chassis', $event)">
             <label class="btn btn-outline-primary" for="tuningButton_chassis">Chassis</label>
 
-            <input type="radio" class="btn-check" name="tuningRadioButton" id="tuningButton_cornering" autocomplete="off"
-                   value = 'cornering'
+            <input type="radio" class="btn-check" name="tuningRadioButton" id="tuningButton_cornering"
+                   autocomplete="off"
+                   value='cornering'
                    (click)="buttonIsChecked($any($event.target).value) ? false : calculateTuningField('cornering', $event)">
             <label class="btn btn-outline-primary" for="tuningButton_cornering">Cornering</label>
         </div>
         <div>
             <button
-            (click)="saveCalculatedPlayerCard()">Do it</button>
+                    id="saveToDatabaseButton"
+                    (click)="saveCalculatedPlayerCard()">Do it
+            </button>
         </div>
         <div>
             <button
