--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,20 +1,20 @@
-.keep-ratio-list {
+/*.keep-ratio-list {
     background-color: red;
     position: relative;
     width: 100%;
-    padding-right: 56.25%; /* 16:9 Aspect Ratio */
+    padding-right: 56.25%; !* 16:9 Aspect Ratio *!
 }
 
 .keep-ratio-tile {
     position:  absolute;
-    top: 0;
+    !*top: 0;
     left: 0;
     bottom: 0;
-    right: 0;
+    right: 0;*!
     text-align: center;
     font-size: 20px;
     color: white;
-}
+}*/
 
 .header {
 
