--- a/src/app/fight-table/fight-table.component.css
+++ b/src/app/fight-table/fight-table.component.css
@@ -13,14 +13,29 @@
     display: inline-flex;
     position: relative;
     transform-style: preserve-3d;
-
     flex: none;
     margin: 1rem 1rem;
     height: 350px;
     width: 260px;
+
 }
 
-.card-place .card-placeholder {
+.active {
+    box-shadow: inset 5px 5px 18px white,
+    inset -5px -5px 18px white;
+    border-radius: 10px;
+    background: #9eb9d2;
+    height: 100%;
+    width: 100%;
+}
+
+.box {
+    border: solid white;
+    width: 150px;
+    height: 150px;
+}
+
+.card-placeholder {
     border-radius: 10px;
     background: #9eb9d2;
     box-shadow: inset 5px 5px 18px #363636,
@@ -36,4 +51,71 @@
     backface-visibility: hidden;*/
     /*box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.3);*/
     /*transition: transform 0.3s cubic-bezier(0.4, 0.2, 0.2, 1);*/
+}
+
+.drop1 {
+    width: 40%;
+    border: solid 1px #ccc;
+    min-height: 60px;
+    display: inline-block;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-top: 25px;
+}
+
+
+.example-container {
+    width: 400px;
+    max-width: 100%;
+    margin: 0 25px 25px 0;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.example-list {
+    border: solid 1px #ccc;
+    min-height: 60px;
+    background: white;
+    border-radius: 4px;
+    overflow: hidden;
+    display: block;
+}
+
+.example-box {
+    padding: 20px 10px;
+    border-bottom: solid 1px #ccc;
+    color: rgba(0, 0, 0, 0.87);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+    cursor: move;
+    background: white;
+    font-size: 14px;
+}
+
+.cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.cdk-drag-placeholder {
+    opacity: 0;
+}
+
+.cdk-drag-animating {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+.example-box:last-child {
+    border: none;
+}
+
+.example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+    transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
