--- a/src/app/admin/manage-basecards/manage-basecards.component.html
+++ b/src/app/admin/manage-basecards/manage-basecards.component.html
@@ -27,3 +27,6 @@
             id="search_{{cardProperty[0]}}"
             [attr.data-search]=cardProperty[0]>
 </div>
+
+<app-base-card-list
+[baseCards]="baseCards"></app-base-card-list>
